# SDL_CMake_Template

./: .gitignore  CMakeLists.txt  Readme.md  main.c
